--- a/data/index.html
+++ b/data/index.html
@@ -34,6 +34,12 @@
         <p><span class="reading">Z: <span id="accZ"></span> ms<sup>2</sup></span></p>
       </div>
       <div class="card">
+        <p class="card-title">Angle</p>
+        <p><span class="reading">X: <span id="angX"></span> deg<sup>2</sup></span></p>
+        <p><span class="reading">Y: <span id="angY"></span> deg<sup>2</sup></span></p>
+        <p><span class="reading">Z: <span id="angZ"></span> deg<sup>2</sup></span></p>
+      </div>
+      <div class="card">
         <p class="card-title">TEMPERATURE</p>
         <p><span class="reading"><span id="temp"></span> &deg;C</span></p>
         <p class="card-title">3D ANIMATION</p>
